# seeder-app

./: BF1IdleSeeder2.0.mcr  Cargo.toml  config.txt
.github/workflows/: main.yml
src/: actions.rs  chars.rs  ea_desktop_test.rs  functions.rs  main.rs  message_test.rs  origin_test.rs  send_keys.rs  steam_test.rs  structs.rs
src/actions/: backend.rs  game.rs  launchers.rs  mod.rs
src/functions/: anti_afk.rs  auto_message.rs  mod.rs  seed_server.rs
src/input/: chars.rs  mod.rs  send_keys.rs
