[package]
name = "bf-seeder"
description = ""
version = "0.3.5"
edition = "2018"
authors = ["iiTzArcur <arcur@gametools.network>"]
default-run = "bf-seeder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.18"
serde = "1.0.152"
serde_derive = "1.0.152"
confy = "0.5.1"
winproc = "0.6.4"
winapi = { version = "0.3.9", features = ["winuser"] }
ureq = { version = "2.6.2", features = ["json"] }
chrono = "*"
hostname = "^0.3"
system_shutdown = "4.0.1"
urlencoding = "2.1.2"
directories = "4.0"
regex = "1"
registry = "1.2.2"
log = "0.4"
env_logger = "0.10.0"

[[bin]]
name = "bf-seeder"
path = "src/main.rs"

[[bin]]
name = "origin_test"
path = "src/origin_test.rs"

[[bin]]
name = "ea_desktop_test"
path = "src/ea_desktop_test.rs"

[[bin]]
name = "steam_test"
path = "src/steam_test.rs"