[package]
name = "bf-seeder"
description = ""
version = "0.3.8"
edition = "2018"
authors = ["iiTzArcur <arcur@gametools.network>"]
default-run = "bf-seeder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.21"
serde = "1.0"
serde_derive = "1.0"
confy = "0.6"
winproc = "0.6"
winapi = { version = "0.3", features = ["winuser"] }
ureq = { version = "2.6", features = ["json"] }
chrono = "*"
hostname = "^0.4"
system_shutdown = "4.0"
urlencoding = "2.1"
directories = "5.0"
regex = "1"
registry = "1.2"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "bf-seeder"
path = "src/main.rs"

[[bin]]
name = "origin_test"
path = "src/origin_test.rs"

[[bin]]
name = "ea_desktop_test"
path = "src/ea_desktop_test.rs"

[[bin]]
name = "steam_test"
path = "src/steam_test.rs"

[[bin]]
name = "message_test"
path = "src/message_test.rs"